--- a/Solid_Design_Principles.ipynb
+++ b/Solid_Design_Principles.ipynb
@@ -572,9 +572,9 @@
     "\n",
     "# Usage\n",
     "obj = MyClass(\"I am an instance attribute\")\n",
-    "print(obj.instance_method())  # Instance method accessing: I am an instance attribute\n",
-    "print(MyClass.class_method())  # Class method accessing: I am a class attribute\n",
-    "print(MyClass.static_method())  # Static method does not access instance or class attributes\n"
+    "print(obj.instance_method())  \n",
+    "print(MyClass.class_method())  \n",
+    "print(MyClass.static_method())  \n"
    ]
   },
   {
